fixes distortion of ham menu

--- a/src/Landing.scss
+++ b/src/Landing.scss
@@ -156,17 +156,7 @@ $button-breakpoint: 500px;
         transform: translateY(-3px);
     }
 
-    .menu-btn {
-        position: relative;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 80px;
-        height: 80px;
-        cursor: pointer;
-        transition: all .5s, ease-in-out;
-        border: 3px solid white;
-    }
+  
 
     @media screen and (max-width: 572px)  {
         #intro-text {
