--- a/src/NavBar.scss
+++ b/src/NavBar.scss
@@ -79,6 +79,18 @@
         transform: translateY(-3px);
     }
 
+    .menu-btn {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 80px;
+        height: 80px;
+        cursor: pointer;
+        transition: all .5s, ease-in-out;
+        border: 3px solid white;
+    }
+
     .menu-btn-burger {
         width: 50px;
         height: 6px;
@@ -86,12 +98,13 @@
         border-radius: 5px;
         box-shadow: 0 2px 5px rgba(255, 101, 47, 0.2);
         transition: all 0.5s ease-in-out;
-        position: relative;
+        left: 0;
     }
 
     .menu-btn-burger::before, .menu-btn-burger::after {
         content: '';
         position: absolute;
+        left: 0;
         width: 50px;
         height: 6px;
         background: black;
